<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLogIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/Title"
        android:textColor="@android:color/black"
        android:textSize="100sp" />

    <EditText
        android:id="@+id/EmailLogInText"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:background="#11000000"
        android:drawableRight="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/RegisterMail"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:singleLine="false"
        android:textColor="@color/cardview_light_background" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="#11000000"
        android:ems="10"
        android:drawableRight="@drawable/ic_action_lock"
        android:hint="@string/fui_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="5dp" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/LoginText"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/RegisterText" />
</LinearLayout>