<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageBackgroundMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/only_background" />

        <ImageView
            android:id="@+id/imagePostItSignUp"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="55dp"
            android:rotation="90"
            app:srcCompat="@drawable/azul_tres" />

        <ImageView
            android:id="@+id/imagePostItLogIn"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:rotation="90"
            app:srcCompat="@drawable/azul_cuatro" />

        <ImageView
            android:id="@+id/imageNotebookMain"
            android:layout_width="394dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/only_notebook" />

        <TextView
            android:id="@+id/TextViewLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="92dp"
            android:layout_marginBottom="40dp"
            android:rotation="90"
            android:text="@string/LoginText"
            android:textColor="@color/browser_actions_text_color" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="136dp"
            android:layout_marginBottom="40dp"
            android:rotation="90"
            android:text="@string/SignUp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Title"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="30sp" />

    </FrameLayout>

</LinearLayout>
