<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".Register">

    <TextView
        android:id="@+id/textCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/RegistraText"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/browser_actions_divider_color"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/linearRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:drawableRight="@drawable/ic_action_mail"
                    android:hint="@string/RegisterMail"
                    android:paddingLeft="5dp"
                    android:textColorHint="@color/cardview_light_background" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:hint="@string/RegisterUser"
                    android:drawableRight="@drawable/ic_action_user"
                    android:paddingLeft="5dp"
                    android:textColorHint="@color/browser_actions_bg_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp">

                <EditText
                    android:id="@+id/registerPassw"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:hint="Password"
                    android:drawableRight="@drawable/ic_action_lock"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:textColor="@color/browser_actions_bg_grey" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:addStatesFromChildren="false"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="25dp"
                app:cardElevation="9dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/RegisterTextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:text="@string/RegisterTextButton"
                        android:textColor="#fff"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>